--- a/index.html
+++ b/index.html
@@ -5,25 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Header Logo</h1>
-        <h3>header link one </h3>
-        <h3>header link two</h3>
-        <h3>header link three</h3>
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. Its a smaller font ant the colour is lower contrast</p>
-        <button>Sign up</button>
+        <div class="first-container">
+            <div class="first-container-title-and-links">
+                <h1>The Elder Scrolls Games</h1>
+                <a href="">morrowind</a>
+                <a href="">oblivion</a>
+                <a href="">skyrim</a>
+            </div>
+            <div class="first-container-image">
+                <img src="" alt="">
+            </div>
+            <div class="first-container-bottom">
+                <h1>This Website is awesome</h1>
+                <p>Click the button below to vote for the best of three elder scrolls Games</p>
+                <button>Vote</button>
+            </div>
+        </div>
     </header>
 
     
     <h1> Some random information.</h1>
-    <img src="./dice.avif" alt="">
+    <img src="./images/morrowind-2.jpeg" alt="">
     <p>subtext to descibe image</p>
-    <img src="" alt="">
+    <img src="./images/oblivion.jpeg" alt="">
     <p>subtext to descibe image</p>
-    <img src="" alt="">
+    <img src="./images/skyrim.jpeg" alt="">
     <p>subtext to descibe image</p>
     <img src="" alt="">
     <p>subtext to descibe image</p>
@@ -32,11 +42,11 @@
     <h6>-Thor, God of Thunder</h6>
 
     <p>Call to action! It's time!</p>
-    <p>Sign up for our product by clickng that button over there!</p>
-    <button>Sign Up</button>
+    <p>Vote for the best title by clickng that button over there!</p>
+    <button>Vote</button>
 
     <footer>
-        Copyright @ The Odin Project 2021
+        Copyright @ The Unofficial Elder Scrolls Project 2022
     </footer>
 </body>
 </html>
